// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextArea /> should render successfully 1`] = `
.c0 {
  display: block;
  width: 100%;
  height: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 10px;
  font-size: 1.7rem;
  border-radius: 3px;
  border: 1px solid #2f3b52;
  outline: 0;
  background-color: #20293c;
  color: white;
  box-shadow: 0 0 3px 1px rgb(0 0 0 / 0.16);
}

.c0:focus {
  border-color: #3e8efa;
}

<div>
  <textarea
    aria-label="aria text"
    class="c0"
    placeholder="enter value here"
  >
    textarea value
  </textarea>
</div>
`;

exports[`<TextArea /> should render successfully without resize controls 1`] = `
.c0 {
  display: block;
  width: 100%;
  height: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 10px;
  font-size: 1.7rem;
  border-radius: 3px;
  border: 1px solid #2f3b52;
  outline: 0;
  background-color: #20293c;
  color: white;
  box-shadow: 0 0 3px 1px rgb(0 0 0 / 0.16);
  resize: none;
}

.c0:focus {
  border-color: #3e8efa;
}

<div>
  <textarea
    aria-label="aria text"
    class="c0"
    placeholder="enter value here"
  >
    textarea value
  </textarea>
</div>
`;
